--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -52,5 +52,6 @@ jobs:
         uses: github/super-linter@v4
         env:
           VALIDATE_ALL_CODEBASE: false
+          VALIDATE_PYTHON_MYPY: false
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
